--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.2.0",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.9",
     "dotenv-cli": "^7.3.0",
     "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
