--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.2.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
     "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
