--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postifyTest?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postifyTest2?schema=public"
